# vamp

./: .editorconfig  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  meson.build  meson_options.txt
.github/workflows/: ci.yml
cli/src/: meson.build
docker/build-environment/: Dockerfile
docker/test/: Dockerfile
docker/vamp/: Dockerfile
src/: main.vala  meson.build
src/models/: Bugs.vala  FundingInfo.vala  Package.vala  Person.vala  Repository.vala
tests/: FileTest.vala  FileTests.vala  UnitTests.vala  VampTests.vala  config.vapi.in  full-vamp.json  meson.build  vamp.json
tests/assets/: full-vamp.json  vamp.json
vamp/: meson.build
vamp/src/: meson.build
vamp/src/models/: Bugs.vala  FundingInfo.vala  Package.vala  Person.vala  Repository.vala
vamp/tests/: config.vapi.in  meson.build
vamp/tests/assets/: expected-basic-vamp.json  expected-full-vamp.json
